--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "motion": "^11.11.17",
     "next": "15.0.2",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.4",
