--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "motion": "^11.13.1",
-    "next": "15.0.2",
+    "next": "^15.1.0",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
