--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "@tanstack/react-table": "^8.20.6",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "drizzle-orm": "^0.36.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "motion": "^11.13.1",
-    "next": "^15.1.0",
+    "next": "^15.1.5",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
