add api route and sign in,up page.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^9.1.2",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
